[package]
name = "rspb"
version = "0.1.0"
authors = ["Margatroid <i@margatroid.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bytes = "1.0.0"
futures = { version = "=0.3.5", default-features = false }
sled = {version = "0.34.6", features = ["compression"]}
blake3 = "0.3.7"
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
flexi_logger = { version = "0.17.0", features = ["colors"]}
syntect = "4.5.0"
lazy_static = "1.4.0"
bincode = "1.3.1"
