[package]
name = "rspb"
version = "0.1.17"
authors = ["Margatroid <i@margatroid.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bytes = "1.1"
futures = { version = "0.3", default-features = false }
sled = {version = "0.34.6", features = ["compression"]}
blake3 = "1.0.0"
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
flexi_logger = { version = "0.18.1", features = ["colors"]}
syntect = "4.6.0"
lazy_static = "1.4.0"
bincode = "1.3.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
num-bigint = "0.4"
mime_guess = "2.0.3"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
mimalloc = { version = "*", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
